# projeto-pratico

./: Cadastro.py  clientes.csv  pyproject.toml
Pages/: Consulta.py
